--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-scripts": "^2.1.3",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
@@ -42,5 +43,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
 }
