Updated the manifest and cleaned up the index

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,6 @@
     ],
     "start_url": ".",
     "display": "standalone",
-    "theme_color": "#90ee90",
+    "theme_color": "#349aed",
     "background_color": "#e7f0f7"
 }
