--- a/package.json
+++ b/package.json
@@ -1,37 +1,26 @@
 {
-    "name": "wcc-goal-viewer",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "webpack-dev-server --mode development --open --hot",
-        "build": "webpack --mode production"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@reduxjs/toolkit": "^1.8.2",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-is": "^18.2.0",
-        "react-redux": "^8.0.2",
-        "simplebar-react": "^2.4.1",
-        "styled-components": "^5.3.5"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.18.5",
-        "@types/react": "^18.0.14",
-        "@types/react-dom": "^18.0.5",
-        "@types/styled-components": "^5.1.25",
-        "copy-webpack-plugin": "^11.0.0",
-        "css-loader": "^6.7.1",
-        "html-webpack-plugin": "^5.5.0",
-        "style-loader": "^3.3.1",
-        "ts-loader": "^9.3.0",
-        "typescript": "^4.7.4",
-        "webpack": "^5.73.0",
-        "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.9.2"
-    }
+  "name": "wcc-goal-viewer",
+  "private": true,
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-redux": "^8.0.2",
+    "simplebar-react": "^2.4.1",
+    "styled-components": "^5.3.5"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@types/styled-components": "^5.1.25",
+    "@vitejs/plugin-react": "^1.3.0",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.9"
+  }
 }
