--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "jotai": "^1.7.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "simplebar-react": "^2.4.1"
+    "simplebar-react": "^2.4.1",
+    "valtio": "^1.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
