--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-textarea-autosize": "^8.3.4",
     "simplebar-react": "^2.4.1",
     "valtio": "^1.6.1"
   },
