--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.5",
     "react": "^18.0.0",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.0.0",
     "react-textarea-autosize": "^8.3.4",
     "simplebar-react": "^2.4.1",
