--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@dnd-kit/core": "^6.0.5",
+    "immer": "^9.0.15",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-textarea-autosize": "^8.3.4",
     "simplebar-react": "^2.4.1",
-    "valtio": "^1.6.1"
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
