--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "immer": "^9.0.15",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-modal": "^3.15.1",
     "react-textarea-autosize": "^8.3.4",
     "simplebar-react": "^2.4.1",
     "zustand": "^4.0.0-rc.1"
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-modal": "^3.13.1",
     "@vitejs/plugin-react": "^1.3.0",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
