--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-modal": "^3.15.1",
     "react-textarea-autosize": "^8.3.4",
     "simplebar-react": "^2.4.1",
+    "zod": "^3.17.3",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
